# siwe-py

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  codeql-analysis.yml
siwe/: __init__.py  defs.py  parsed.py  siwe.py
siwe/grammars/: __init__.py  eip4361.py  rfc3339.py  rfc5234.py
src/siwe/: parsed.py  siwe.py
src/siwe/grammars/: eip4361.py  rfc3339.py  rfc5234.py
tests/: test_siwe.py
tests/data/: parsing_negative.json  parsing_positive.json  validation_negative.json  validation_positive.json
