[tool.poetry]
name = "siwe"
version = "2.4.0"
description = "A Python implementation of Sign-In with Ethereum (EIP-4361)."
license = "MIT OR Apache-2.0"
authors = [
  "Spruce Systems, Inc. <hello@spruceid.com>",
  "Payton Garland <payton.r.g@gmail.com>",
]
readme = "README.md"
homepage = "https://login.xyz"
repository = "https://github.com/spruceid/siwe-py"
keywords = ["SIWE", "EIP-4361", "Sign-In with Ethereum", "Spruce ID"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
abnf = "1.1.1"
web3 = "^6.0.0"
python-dateutil = "2.8.2"
eth-account = ">=0.8.0,<0.11"
eth-utils = ">=2.2.0,<2.4"
eth-typing = ">=3.4.0,<3.6"
pydantic = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.3.0"
pyhumps = "^3.5.0"
ruff = "^0.0.285"
deptry = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"EIP" = "https://github.com/ethereum/EIPs/blob/master/EIPS/eip-4361.md"
"Discord" = "https://discord.gg/Sf9tSFzrnt"

[tool.pyright]
typeCheckingMode = "basic"

[tool.ruff]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "C",   # flake8-comprehensions
  "B",   # flake8-bugbear
  "RUF", # ruff specific
  "PT",  # flake8-pytest-style
  "SIM", # flake8-simplify
  "D",   # pydocstyle
]

include = ["siwe/**"]
ignore = ["D203", "D213"]
